--- a/Mobile_Recharge/mobile_recharge_frontend/src/app/layouts/main-layout/main-layout.component.html
+++ b/Mobile_Recharge/mobile_recharge_frontend/src/app/layouts/main-layout/main-layout.component.html
@@ -5,7 +5,7 @@
   >
     <div class="container-fluid">
       <a class="navbar-brand fw-bold" routerLink="/">
-        <i class="fas fa-mobile-alt me-2"></i>Mobile Recharge
+        <img src="logo.png" alt="Logo" class="navbar-logo me-2">Mobile Recharge
       </a>
 
       <button
