--- a/Mobile_Recharge/mobile_recharge_frontend/src/app/admin/admin-layout/admin-layout.component.css
+++ b/Mobile_Recharge/mobile_recharge_frontend/src/app/admin/admin-layout/admin-layout.component.css
@@ -15,6 +15,13 @@
   font-weight: 600;
 }
 
+.admin-logo {
+  width: 30px;
+  height: 30px;
+  object-fit: contain;
+  border-radius: 100%;
+}
+
 .btn-outline-light {
   border-color: #E10600;
   color: #E10600;
