--- a/Mobile_Recharge/mobile_recharge_frontend/src/app/admin/admin-layout/admin-layout.component.html
+++ b/Mobile_Recharge/mobile_recharge_frontend/src/app/admin/admin-layout/admin-layout.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm">
   <div class="container-fluid">
-    <a class="navbar-brand mb-0 h1" href="#">Welcome Admin</a>
+    <a class="navbar-brand mb-0 h1" href="#">
+      <img src="logo.png" alt="Logo" class="admin-logo me-2">Welcome Admin
+    </a>
     <ul class="navbar-nav ms-auto">
       <li class="nav-item">
         <a
